@@ -4,6 +4,9 @@ import org.jetbrains.annotations.Nullable;
 import org.mydrugs.mydrugs.core.drug.DrugCategory;
 import org.mydrugs.mydrugs.core.drug.DrugId;
 import org.mydrugs.mydrugs.addiction.config.SymptomFlags;
+import org.mydrugs.mydrugs.addiction.data.WithdrawalPhase;
+import org.mydrugs.mydrugs.addiction.explain.AddictionDangerReason;
+import org.mydrugs.mydrugs.addiction.explain.AddictionSuggestedAction;
 import org.mydrugs.mydrugs.core.drug.dose.DosePath;
 import org.mydrugs.mydrugs.core.drug.dose.DoseState;
 import org.mydrugs.mydrugs.core.drug.dose.DoseManager;
@@ -13,8 +16,11 @@ import org.mydrugs.mydrugs.addiction.network.DoseSyncPayload;
 import org.mydrugs.mydrugs.addiction.network.DrugEffectSyncPayload;
 import org.mydrugs.mydrugs.core.drug.effect.EffectType;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.EnumMap;
+import java.util.List;
 
 public final class AddictionClientState {
     public static float globalSeverity;
@@ -25,6 +31,11 @@ public final class AddictionClientState {
     public static int insomniaTicksRemaining;
     public static int recoveryFlags;
     public static int overdoseTicksRemaining;
+    public static int primaryDangerReason;
+    public static int suggestedAction;
+    public static int withdrawalPhase;
+    public static float dominantTolerance;
+    public static float dominantDose;
     public static boolean badTripActive;
     public static float badTripThreshold;
     public static float badTripSeverity;
@@ -35,6 +46,24 @@ public final class AddictionClientState {
 
     private static final float[] categoryDoses = new float[DrugCategory.values().length];
     private static final EnumMap<EffectType, ClientDrugEffect> activeEffects = new EnumMap<>(EffectType.class);
+    private static final float TREND_DEADBAND = 0.02F;
+    private static final float TREND_SMOOTHING = 0.12F;
+    private static final String TREND_RISING = "↑";
+    private static final String TREND_EASING = "↓";
+    private static final String TREND_STABLE = "→";
+
+    private static boolean withdrawalTrendInitialized;
+    private static boolean stressTrendInitialized;
+    private static boolean badTripTrendInitialized;
+    private static boolean doseTrendInitialized;
+    private static float withdrawalSmoothed;
+    private static float stressSmoothed;
+    private static float badTripSmoothed;
+    private static float doseSmoothed;
+    private static String withdrawalTrendArrow = TREND_STABLE;
+    private static String stressTrendArrow = TREND_STABLE;
+    private static String badTripTrendArrow = TREND_STABLE;
+    private static String doseTrendArrow = TREND_STABLE;
 
     private AddictionClientState() {
     }
@@ -48,6 +77,11 @@ public final class AddictionClientState {
         insomniaTicksRemaining = 0;
         recoveryFlags = 0;
         overdoseTicksRemaining = 0;
+        primaryDangerReason = 0;
+        suggestedAction = 0;
+        withdrawalPhase = 0;
+        dominantTolerance = 0.0F;
+        dominantDose = 0.0F;
         badTripActive = false;
         badTripThreshold = 0.0F;
         badTripSeverity = 0.0F;
@@ -57,9 +91,13 @@ public final class AddictionClientState {
         badTripSymptomIntensity = 0.0F;
         Arrays.fill(categoryDoses, 0.0F);
         activeEffects.clear();
+        resetTrends();
     }
 
     public static void apply(AddictionClientSnapshotPayload payload) {
+        updateWithdrawalTrend(payload.globalSeverity());
+        updateStressTrend(payload.stressLevel());
+        updateDoseTrend(payload.dominantDose());
         globalSeverity = payload.globalSeverity();
         stressLevel = payload.stressLevel();
         dominantDrugId = payload.dominantDrugId();
@@ -68,6 +106,11 @@ public final class AddictionClientState {
         insomniaTicksRemaining = payload.insomniaTicksRemaining();
         recoveryFlags = payload.recoveryFlags();
         overdoseTicksRemaining = payload.overdoseTicksRemaining();
+        primaryDangerReason = payload.primaryDangerReason();
+        suggestedAction = payload.suggestedAction();
+        withdrawalPhase = payload.withdrawalPhase();
+        dominantTolerance = payload.dominantTolerance();
+        dominantDose = payload.dominantDose();
     }
 
     public static void applyDoseSync(DoseSyncPayload payload) {
@@ -77,6 +120,7 @@ public final class AddictionClientState {
     }
 
     public static void applyBadTrip(BadTripPayload payload) {
+        updateBadTripTrend(payload.severity());
         badTripActive = payload.active();
         badTripThreshold = payload.threshold();
         badTripSeverity = payload.severity();
@@ -89,13 +133,9 @@ public final class AddictionClientState {
     public static void applyDrugEffectSync(DrugEffectSyncPayload payload) {
         activeEffects.clear();
         for (DrugEffectSyncPayload.Entry entry : payload.effects()) {
-            if (entry.type() != null && entry.intensity() > 0.0F && entry.remainingTicks() > 0) {
-                activeEffects.put(entry.type(), new ClientDrugEffect(
-                        entry.intensity(),
-                        entry.remainingTicks(),
-                        entry.fadeTicksRemaining(),
-                        entry.fadeDurationTicks()
-                ));
+            if (entry.type() != null && entry.intensity() > 0.0F
+                    && (entry.activeTicks() > 0 || entry.fadeTicksRemaining() > 0 || entry.remainingTicks() > 0)) {
+                activeEffects.put(entry.type(), new ClientDrugEffect(entry));
             }
         }
     }
@@ -107,6 +147,34 @@ public final class AddictionClientState {
 
     public static boolean hasEffect(EffectType type) {
         return getEffectIntensity(type) > 0.001F;
+    }
+
+    public static List<ClientEffectView> activeEffectViews() {
+        List<ClientEffectView> views = new ArrayList<>(activeEffects.size());
+        for (var entry : activeEffects.entrySet()) {
+            ClientDrugEffect effect = entry.getValue();
+            if (effect.remainingTicks() <= 0 || effect.intensity() <= 0.001F) {
+                continue;
+            }
+            views.add(effect.toView(entry.getKey()));
+        }
+        views.sort(Comparator
+                .comparingInt(AddictionClientState::effectPriority).reversed()
+                .thenComparingInt(ClientEffectView::remainingTicks));
+        return List.copyOf(views);
+    }
+
+    public static String formatDuration(int ticks) {
+        int seconds = Math.max(0, Math.round(ticks / 20.0F));
+        if (seconds <= 0) {
+            return "<1s";
+        }
+        if (seconds < 60) {
+            return seconds + "s";
+        }
+        int minutes = seconds / 60;
+        int remainder = seconds % 60;
+        return minutes + ":" + (remainder < 10 ? "0" : "") + remainder;
     }
 
     public static boolean has(int flag) {
@@ -147,6 +215,10 @@ public final class AddictionClientState {
 
     public static boolean hasSleepBonus() {
         return hasRecoveryFlag(AddictionClientSnapshotPayload.RECOVERY_SLEEP_BONUS);
+    }
+
+    public static boolean hasPreparedTea() {
+        return hasRecoveryFlag(AddictionClientSnapshotPayload.RECOVERY_PREPARED_TEA);
     }
 
     public static boolean hasActiveRecoverySupport() {
@@ -234,7 +306,9 @@ public final class AddictionClientState {
         boolean doseDanger = hasDangerousDoseState();
         boolean temporarySupport = hasDiaryCalm() || hasCalmingMixture() || hasHeadphonesCalm() || hasSleepBonus();
         boolean safeZoneContext = isInSafeZone() && unstable;
-        return badTripActive || unstable || doseDanger || temporarySupport || safeZoneContext;
+        return badTripActive || unstable || doseDanger || temporarySupport || safeZoneContext
+                || getPrimaryDangerReason() != AddictionDangerReason.NONE
+                || !activeEffects.isEmpty();
     }
 
     public static void tick() {
@@ -250,42 +324,231 @@ public final class AddictionClientState {
         activeEffects.entrySet().removeIf(entry -> entry.getValue().tick());
     }
 
+    public static AddictionDangerReason getPrimaryDangerReason() {
+        return AddictionDangerReason.byNetworkId(primaryDangerReason);
+    }
+
+    public static AddictionSuggestedAction getSuggestedAction() {
+        return AddictionSuggestedAction.byNetworkId(suggestedAction);
+    }
+
+    public static WithdrawalPhase getWithdrawalPhase() {
+        return WithdrawalPhase.byNetworkId(withdrawalPhase);
+    }
+
+    public static String trendArrowForWithdrawal() {
+        return withdrawalTrendArrow;
+    }
+
+    public static String trendArrowForStress() {
+        return stressTrendArrow;
+    }
+
+    public static String trendArrowForBadTrip() {
+        return badTripTrendArrow;
+    }
+
+    public static String trendArrowForDose() {
+        return doseTrendArrow;
+    }
+
+    public static String trendArrow(float current, float previousSmoothed) {
+        float diff = current - previousSmoothed;
+        if (diff >= TREND_DEADBAND) {
+            return TREND_RISING;
+        }
+        if (diff <= -TREND_DEADBAND) {
+            return TREND_EASING;
+        }
+        return TREND_STABLE;
+    }
+
+    public record ClientEffectView(EffectType type, float effectiveIntensity, float riskPressure, int remainingTicks,
+                                   boolean fading, boolean comedown, String displayLabel) {
+        public String durationText() {
+            return formatDuration(remainingTicks);
+        }
+    }
+
     private static final class ClientDrugEffect {
         private final float intensity;
-        private int remainingTicks;
+        private final float riskPressure;
+        private int activeTicks;
+        private int ageTicks;
+        private final int baselineDurationTicks;
         private int fadeTicksRemaining;
         private final int fadeDurationTicks;
+        private final int onsetTicks;
+        private final int peakTicks;
+        private final int comedownTicks;
 
-        private ClientDrugEffect(float intensity, int remainingTicks, int fadeTicksRemaining, int fadeDurationTicks) {
-            this.intensity = intensity;
-            this.remainingTicks = remainingTicks;
-            this.fadeTicksRemaining = fadeTicksRemaining;
-            this.fadeDurationTicks = fadeDurationTicks;
+        private ClientDrugEffect(DrugEffectSyncPayload.Entry entry) {
+            this.intensity = entry.intensity();
+            this.riskPressure = entry.riskPressure();
+            this.activeTicks = Math.max(0, entry.activeTicks());
+            this.ageTicks = Math.max(0, entry.ageTicks());
+            this.baselineDurationTicks = Math.max(this.activeTicks, entry.baselineDurationTicks());
+            this.fadeTicksRemaining = Math.max(0, entry.fadeTicksRemaining());
+            this.fadeDurationTicks = Math.max(0, entry.fadeDurationTicks());
+            this.onsetTicks = Math.max(0, entry.onsetTicks());
+            this.peakTicks = Math.max(0, entry.peakTicks());
+            this.comedownTicks = Math.max(0, entry.comedownTicks());
         }
 
         private float intensity() {
-            if (this.fadeTicksRemaining <= 0 || this.fadeDurationTicks <= 0) {
-                return this.intensity;
+            return this.intensity * activePhaseScale() * fadeScale();
+        }
+
+        private int remainingTicks() {
+            return activeTicks + fadeTicksRemaining;
+        }
+
+        private boolean fading() {
+            return activeTicks <= 0 && fadeTicksRemaining > 0;
+        }
+
+        private boolean comedown() {
+            if (fading() || !hasPhaseCurve() || activeTicks <= 0) {
+                return false;
             }
-            return this.intensity * Math.clamp(this.fadeTicksRemaining / (float) this.fadeDurationTicks, 0.0F, 1.0F);
+            int total = activeDurationTotal();
+            int onset = Math.min(onsetTicks, Math.max(0, total - 1));
+            return ageTicks >= comedownStart(total, onset);
+        }
+
+        private ClientEffectView toView(EffectType type) {
+            return new ClientEffectView(
+                    type,
+                    intensity(),
+                    riskPressure,
+                    remainingTicks(),
+                    fading(),
+                    comedown(),
+                    type.diaryLabel().isBlank() ? type.serializedName() : type.diaryLabel()
+            );
         }
 
         private boolean tick() {
-            if (this.remainingTicks > 0) {
-                this.remainingTicks--;
+            if (this.activeTicks > 0) {
+                this.ageTicks++;
+                this.activeTicks--;
             }
-            if (this.remainingTicks <= 0 && this.fadeTicksRemaining <= 0 && this.fadeDurationTicks > 0) {
+            if (this.activeTicks <= 0 && this.fadeTicksRemaining <= 0 && this.fadeDurationTicks > 0) {
                 this.fadeTicksRemaining = this.fadeDurationTicks;
             }
             if (this.fadeTicksRemaining > 0) {
                 this.fadeTicksRemaining--;
             }
-            return this.remainingTicks <= 0 && this.fadeTicksRemaining <= 0;
+            return this.activeTicks <= 0 && this.fadeTicksRemaining <= 0;
+        }
+
+        private boolean hasPhaseCurve() {
+            return onsetTicks > 0 || peakTicks > 0 || comedownTicks > 0;
+        }
+
+        private float activePhaseScale() {
+            if (!hasPhaseCurve() || activeTicks <= 0) {
+                return 1.0F;
+            }
+
+            int total = activeDurationTotal();
+            int onset = Math.min(onsetTicks, Math.max(0, total - 1));
+            if (onset > 0 && ageTicks < onset) {
+                return Math.clamp(ageTicks / (float) onset, 0.0F, 1.0F);
+            }
+
+            int comedownStart = comedownStart(total, onset);
+            if (ageTicks >= comedownStart && total > comedownStart) {
+                return Math.clamp((total - ageTicks) / (float) (total - comedownStart), 0.0F, 1.0F);
+            }
+
+            return 1.0F;
+        }
+
+        private float fadeScale() {
+            if (activeTicks > 0 || fadeDurationTicks <= 0) {
+                return 1.0F;
+            }
+            return Math.clamp(fadeTicksRemaining / (float) fadeDurationTicks, 0.0F, 1.0F);
+        }
+
+        private int activeDurationTotal() {
+            return Math.max(1, Math.max(baselineDurationTicks, ageTicks + activeTicks));
+        }
+
+        private int comedownStart(int total, int onset) {
+            int remainingAfterOnset = Math.max(0, total - onset);
+            int comedown = Math.min(comeDownTicks(), remainingAfterOnset);
+            int peak = Math.min(peakTicks, Math.max(0, remainingAfterOnset - comedown));
+            return Math.clamp(Math.max(onset + peak, total - comedown), onset, total);
+        }
+
+        private int comeDownTicks() {
+            return comedownTicks;
         }
     }
 
     private static boolean hasRecoveryFlag(int flag) {
         return (recoveryFlags & flag) != 0;
+    }
+
+    private static void resetTrends() {
+        withdrawalTrendInitialized = false;
+        stressTrendInitialized = false;
+        badTripTrendInitialized = false;
+        doseTrendInitialized = false;
+        withdrawalSmoothed = 0.0F;
+        stressSmoothed = 0.0F;
+        badTripSmoothed = 0.0F;
+        doseSmoothed = 0.0F;
+        withdrawalTrendArrow = TREND_STABLE;
+        stressTrendArrow = TREND_STABLE;
+        badTripTrendArrow = TREND_STABLE;
+        doseTrendArrow = TREND_STABLE;
+    }
+
+    private static void updateWithdrawalTrend(float current) {
+        if (!withdrawalTrendInitialized) {
+            withdrawalSmoothed = current;
+            withdrawalTrendInitialized = true;
+            withdrawalTrendArrow = TREND_STABLE;
+            return;
+        }
+        withdrawalTrendArrow = trendArrow(current, withdrawalSmoothed);
+        withdrawalSmoothed += (current - withdrawalSmoothed) * TREND_SMOOTHING;
+    }
+
+    private static void updateStressTrend(float current) {
+        if (!stressTrendInitialized) {
+            stressSmoothed = current;
+            stressTrendInitialized = true;
+            stressTrendArrow = TREND_STABLE;
+            return;
+        }
+        stressTrendArrow = trendArrow(current, stressSmoothed);
+        stressSmoothed += (current - stressSmoothed) * TREND_SMOOTHING;
+    }
+
+    private static void updateBadTripTrend(float current) {
+        if (!badTripTrendInitialized) {
+            badTripSmoothed = current;
+            badTripTrendInitialized = true;
+            badTripTrendArrow = TREND_STABLE;
+            return;
+        }
+        badTripTrendArrow = trendArrow(current, badTripSmoothed);
+        badTripSmoothed += (current - badTripSmoothed) * TREND_SMOOTHING;
+    }
+
+    private static void updateDoseTrend(float current) {
+        if (!doseTrendInitialized) {
+            doseSmoothed = current;
+            doseTrendInitialized = true;
+            doseTrendArrow = TREND_STABLE;
+            return;
+        }
+        doseTrendArrow = trendArrow(current, doseSmoothed);
+        doseSmoothed += (current - doseSmoothed) * TREND_SMOOTHING;
     }
 
     private static int doseSeverity(DoseState state) {
@@ -295,5 +558,23 @@ public final class AddictionClientState {
             case VERY_DRUNK, VERY_HIGH -> 2;
             case ETHYLIC_COMA, OVERDOSE -> 3;
         };
+    }
+
+    private static int effectPriority(ClientEffectView view) {
+        int priority = 0;
+        if (view.type().isHarmful()) {
+            priority += 100;
+        }
+        if (view.riskPressure() > view.effectiveIntensity() + 0.25F) {
+            priority += 40;
+        }
+        priority += Math.round(Math.min(1.5F, view.effectiveIntensity()) * 20.0F);
+        if (view.remainingTicks() < 20 * 12) {
+            priority += 15;
+        }
+        if (view.fading() || view.comedown()) {
+            priority += 8;
+        }
+        return priority;
     }
 }
